fix scrollbar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -17,6 +17,14 @@
 
         .admin-main {
             // border: 1px solid red;
+
+            height: calc(100vh - 40px);
+
+            .user-pagination {
+                display: flex;
+                justify-content: center;
+
+            }
         }
     }
 }
